iter_language/tests/corpus/valid/queue-kinesis-minimal.iter
queue kinesis {
  stream_arn = "arn:aws:kinesis:us-east-1:123456789012:stream/iter-signals"
  region     = "us-east-1"
}

workspace local {
  base = "."
}

agent claude {
  mode = print
  command = "claude"
}

runner {
  agent = claude
  workspace = local
  queue = kinesis
  continue_on_error = false
  behavior = wait
  prompt = "do the thing"
}
